--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-api",
   "version": "0.1.0",
-  "homepage":"https://bogdanbylinski.github.io/weather-api/",
+  "homepage":"https://bogdanbylinski.github.io/weather-api",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
