--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "weather-api",
   "version": "0.1.0",
-  "homepage":"https://bogdanbylinski.github.io/weather-api",
   "private": true,
+  "homepage":"https://bogdanbylinski.github.io/weather-api/",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
