--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-api",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://bogdanbylinski.github.io/weather-api/",
+  "homepage":"https://bogdanbylinski.github.io/weather-api/",
 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
