--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "weather-api",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://bogdanbylinski.github.io/weather-api/",
-
+  "homepage": "https://bogdanbylinski.github.io/weather-api/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -15,11 +14,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
+    "swiper": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
